--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,20 @@
-@import "~ng-zorro-antd/ng-zorro-antd.dark.css";
+*:focus {
+    outline: none;
+}
+
+div.page {
+    display: flex;
+    align-items: flex-start;
+    justify-content: space-between;
+}
+
+div.page > ul.menu {
+    width: 250px;
+    height: calc(100vh - 50px);
+}
+
+div.page > div.content {
+    width: 100%;
+    box-sizing: border-box;
+    padding: 30px;
+}
