:sparkles: Added pages for Cards, Ports, ONTs, ONT Ports, ...

--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -18,7 +18,7 @@
         <li nz-menu-item><i nz-icon nzType="plus" nzTheme="outline"></i>Create New</li>
     </ul>
 
-    <div class="content">
+    <div class="content" #contentWrapper>
         <router-outlet></router-outlet>
     </div>
 </div>
