--- a/src/app/pages/devices/subrack/subrack.component.css
+++ b/src/app/pages/devices/subrack/subrack.component.css
@@ -1,3 +1,14 @@
+nz-page-header.page-header {
+    padding: 8px 0;
+    background-color: #000000;
+    transition: all 0.25s ease;
+}
+
+nz-page-header.page-header.affixed {
+    padding: 10px 16px 8px 16px;
+    box-shadow: 0px 1px 0px 0px #303030;
+}
+
 h1 {
     margin-bottom: 0;
 }
