:sparkles: Made main window draggable

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ul class="menu" nz-menu nzMode="horizontal">
+<ul class="menu" nz-menu nzMode="horizontal" style="-webkit-app-region: drag;">
     <li class="logo" nz-menu-item nzSelected routerLink="/" [nzMatchRouter]="true" [nzMatchRouterExact]="true">
         <img src="./assets/images/logo.svg" />
     </li>
