:fire: Removed alternative menu from Devices page

--- a/src/app/pages/devices/devices.component.html
+++ b/src/app/pages/devices/devices.component.html
@@ -13,6 +13,27 @@
             </ul>
         </li>
 
+        <!-- <li *ngFor="let name of api.vendorNames" nz-submenu [nzTitle]="name">
+            <ul>
+                <li
+                    *ngFor="let device of api.vendors[name].devices"
+                    nz-submenu
+                    [nzTitle]="device.model + ' ' + device.version"
+                >
+                    <ul>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">Overview</li>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">Subracks</li>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">Cards</li>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">Ports</li>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">ONTs</li>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">ONT Ports</li>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">CPEs</li>
+                        <li nz-menu-item [routerLink]="[device.uuid]" [nzMatchRouter]="true">CPE Ports</li>
+                    </ul>
+                </li>
+            </ul>
+        </li> -->
+
         <nz-divider style="margin: 12px 0;"></nz-divider>
 
         <li nz-menu-item><i nz-icon nzType="plus" nzTheme="outline"></i>Create New</li>
