--- a/src/app/pages/devices/vlan-connection/vlan-connection.component.html
+++ b/src/app/pages/devices/vlan-connection/vlan-connection.component.html
@@ -1,1 +1,23 @@
-<p>vlan-connection works!</p>
+<div *ngIf="vlanConnection">
+    <nz-affix [nzOffsetTop]="0" [nzTarget]="core.devicesContentWrapper.nativeElement" (nzChange)="affixEvent($event)">
+        <nz-page-header
+            class="page-header"
+            [ngClass]="{ affixed: isAffixed }"
+            nzBackIcon
+            [nzTitle]="vlanConnection.name"
+            [nzSubtitle]="vlanConnection.description"
+            (nzBack)="navigateUp()"
+        >
+        </nz-page-header>
+    </nz-affix>
+
+    <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
+    <div class="details">
+        <p *ngFor="let attribute of attributes">
+            {{ attribute.key }}:
+            <span class="field-value"
+                ><span appCodeCopy>{{ attribute.value }}</span></span
+            >
+        </p>
+    </div>
+</div>
