--- a/src/app/pages/devices/vlan/vlan.component.html
+++ b/src/app/pages/devices/vlan/vlan.component.html
@@ -1,1 +1,33 @@
-<p>vlan works!</p>
+<div *ngIf="vlan">
+    <nz-affix [nzOffsetTop]="0" [nzTarget]="core.devicesContentWrapper.nativeElement" (nzChange)="affixEvent($event)">
+        <nz-page-header
+            class="page-header"
+            [ngClass]="{ affixed: isAffixed }"
+            nzBackIcon
+            [nzTitle]="vlan.name"
+            [nzSubtitle]="vlan.description"
+            (nzBack)="navigateUp()"
+        >
+        </nz-page-header>
+    </nz-affix>
+
+    <h5 style="margin-top: 35px;">V-LAN CONNECTIONS</h5>
+    <i *ngIf="vlanConnectionsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
+    <ul *ngIf="vlanConnectionsRequest === 'success'" style="padding-left: 25px;">
+        <li *ngFor="let vlanConnection of vlanConnections">
+            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'vlan-connection', vlanConnection.id]"
+                >V-Lan Connection {{ vlanConnection.id }}</a
+            >
+        </li>
+    </ul>
+
+    <h5 style="margin-top: 35px;">ATTRIBUTES</h5>
+    <div class="details">
+        <p *ngFor="let attribute of attributes">
+            {{ attribute.key }}:
+            <span class="field-value"
+                ><span appCodeCopy>{{ attribute.value }}</span></span
+            >
+        </p>
+    </div>
+</div>
