--- a/src/app/pages/devices/subrack/subrack.component.html
+++ b/src/app/pages/devices/subrack/subrack.component.html
@@ -11,13 +11,13 @@
         </nz-page-header>
     </nz-affix>
 
+    <app-subrack-visual [parentDevice]="parentDeviceId" [cards]="cards"></app-subrack-visual>
+
     <h5 style="margin-top: 35px;">CARDS</h5>
     <i *ngIf="cardsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
     <ul *ngIf="cardsRequest === 'success'" style="padding-left: 25px;">
         <li *ngFor="let card of cards">
-            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'card', card.id]"
-                >Card {{ card.id }}</a
-            >
+            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'card', card.id]">Card {{ card.id }}</a>
         </li>
     </ul>
 
