--- a/src/app/core/components/card-visual/card-visual.component.css
+++ b/src/app/core/components/card-visual/card-visual.component.css
@@ -7,7 +7,7 @@ div.card {
     border: 2px solid #ffffff;
     border-radius: 10px;
     box-sizing: border-box;
-    padding: 15px 15px;
+    padding: 10px 20px;
     flex-wrap: wrap;
 }
 
@@ -30,6 +30,11 @@ div.card div.pair > div.port {
     cursor: pointer;
 }
 
+div.card div.pair > div.port.disabled img {
+    opacity: 0.5;
+    cursor: not-allowed;
+}
+
 div.card div.pair > div.port:nth-child(2) > img {
     transform: scaleY(-1);
 }
@@ -44,6 +49,14 @@ div.card div.pair > div.port > p.port-index {
     font-weight: 700;
 }
 
-h4 {
+h4.name {
+    margin: 10px 0 0 10px;
     cursor: pointer;
+    font-weight: 700;
+}
+
+h4.name > span.description {
+    color: #ffffffa7;
+    font-weight: 400;
+    margin-left: 10px;
 }
