--- a/src/app/core/components/card-visual/card-visual.component.html
+++ b/src/app/core/components/card-visual/card-visual.component.html
@@ -1,19 +1,42 @@
 <div class="card" *ngIf="card">
-    <h4 style="margin: 0 0 0 5px;" [routerLink]="['/devices', parentDevice, 'card', card.id]">
-        <nz-badge [nzStatus]="card.opr_state === 'enabled' ? 'success' : 'error'"></nz-badge> {{ card.name.toUpperCase() }}
+    <!-- "Status LED" and Name of the card -->
+    <h4 class="name" [routerLink]="['/devices', parentDeviceId, 'card', card.id]">
+        <nz-badge [nzStatus]="card.opr_state === 'enabled' ? 'success' : 'error'"></nz-badge>Card {{ card.name.toUpperCase() }}
+        <span class="description">{{ card.description ? card.description.toUpperCase() : "" }}</span>
     </h4>
 
+    <!-- Labeled list of ports (in pairs) -->
     <div class="ports">
-        <ng-container *ngFor="let port of ports; let i = index">
-            <div class="pair" *ngIf="!(i % 2)">
-                <div class="port" *ngIf="ports[i + 2]" [routerLink]="['/devices', parentDevice, 'port', port.id]">
-                    <p class="port-index">{{ i + 2 }}</p>
-                    <img [src]="ports[i + 1].opr_state === 'up' ? 'assets/images/port_active.svg' : 'assets/images/port.svg'" />
+        <ng-container *ngFor="let pair of portPairs; let index = index">
+            <div class="pair">
+                <!-- Upper Port -->
+                <div
+                    class="port"
+                    [ngClass]="{ disabled: pair[1].id === null }"
+                    [routerLink]="pair[1].id !== null ? ['/devices', parentDeviceId, 'port', pair[1].id] : null"
+                >
+                    <p class="port-index">{{ index * 2 + 2 }}</p>
+                    <img
+                        [src]="pair[1].opr_state === 'up' ? 'assets/images/port_active.svg' : 'assets/images/port.svg'"
+                        nz-popover
+                        [nzPopoverTitle]="pair[1].name ? 'Port ' + pair[1].name : 'Unassigned Port'"
+                        [nzPopoverContent]="pair[1].name ? 'Click on Port to see more details' : 'This Port has not been assigned yet'"
+                    />
                 </div>
 
-                <div class="port" [routerLink]="['/devices', parentDevice, 'port', port.id]">
-                    <img [src]="ports[i].opr_state === 'up' ? 'assets/images/port_active.svg' : 'assets/images/port.svg'" />
-                    <p class="port-index">{{ i + 1 }}</p>
+                <!-- Lower Port -->
+                <div
+                    class="port"
+                    [ngClass]="{ disabled: pair[0].id === null }"
+                    [routerLink]="pair[0].id !== null ? ['/devices', parentDeviceId, 'port', pair[0].id] : null"
+                >
+                    <img
+                        [src]="pair[0].opr_state === 'up' ? 'assets/images/port_active.svg' : 'assets/images/port.svg'"
+                        nz-popover
+                        [nzPopoverTitle]="pair[0].name ? 'Port ' + pair[0].name : 'Unassigned Port'"
+                        [nzPopoverContent]="pair[0].name ? 'Click on Port to see more details' : 'This Port has not been assigned yet'"
+                    />
+                    <p class="port-index">{{ index * 2 + 1 }}</p>
                 </div>
             </div>
         </ng-container>
