--- a/src/app/core/components/ont-visual/ont-visual.component.css
+++ b/src/app/core/components/ont-visual/ont-visual.component.css
@@ -5,29 +5,56 @@ div.ont {
     border-radius: 10px;
     box-sizing: border-box;
     padding: 20px 15px;
+}
+
+h4.name {
+    margin: 0 0 20px 5px;
+    cursor: pointer;
+    font-weight: 700;
+}
+
+h4.name > span.description {
+    color: #ffffffa7;
+    font-weight: 400;
+    margin-left: 10px;
+}
+
+div.ont > div.content {
     display: flex;
     align-items: center;
-}
-
-div.ont img.in {
-    height: 42px;
-}
-
-div.ont div.port {
-    display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
-    max-width: 50px;
 }
 
-div.ont p.port-label {
-    text-align: center;
-    margin: 3px 0 0 0;
-    font-weight: 700;
+div.ont > div.content img.in {
+    height: 42px;
 }
 
 div.ont div.ports {
     border-left: 2px solid #ffffff;
     margin-left: 35px;
     padding-left: 35px;
+    display: flex;
+}
+
+div.ont > div.content div.port {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    max-width: 50px;
+    margin-right: 10px;
+}
+
+div.ont > div.content div.port > img {
+    cursor: pointer;
+}
+
+div.ont > div.content div.port.disabled > img {
+    cursor: not-allowed;
+    opacity: 0.5;
+}
+
+div.ont > div.content p.port-label {
+    text-align: center;
+    margin: 3px 0 0 0;
+    font-weight: 700;
 }
