--- a/src/app/core/components/port-visual/port-visual.component.html
+++ b/src/app/core/components/port-visual/port-visual.component.html
@@ -1,7 +1,15 @@
-<img src="assets/images/port.svg" />
+<img
+    *ngIf="port"
+    class="port"
+    [src]="port.opr_state === 'up' ? 'assets/images/port_active.svg' : 'assets/images/port.svg'"
+    [routerLink]="['/devices', parentDeviceId, 'card', port.card_id]"
+    nz-popover
+    [nzPopoverTitle]="'Port ' + port.name"
+    [nzPopoverContent]="'Click to go back to Card view'"
+/>
 
-<div class="onts">
-    <div class="ont" *ngFor="let ont of onts">
-        <app-ont-visual [parentDevice]="parentDevice" [ontId]="ont.id"></app-ont-visual>
+<div class="onts" *ngIf="port">
+    <div class="ont" *ngFor="let ont of port.onts">
+        <app-ont-visual [ontId]="ont.id"></app-ont-visual>
     </div>
 </div>
