--- a/src/app/core/components/subrack-visual/subrack-visual.component.html
+++ b/src/app/core/components/subrack-visual/subrack-visual.component.html
@@ -1,5 +1,5 @@
-<div class="subrack" *ngIf="cards">
-    <ng-container *ngFor="let card of cards">
-        <app-card-visual [parentDevice]="parentDevice" [cardId]="card.id"></app-card-visual>
-    </ng-container>
+<div class="subrack" *ngIf="subrack">
+    <div class="card" *ngFor="let card of subrack.cards || []">
+        <app-card-visual [card]="card"></app-card-visual>
+    </div>
 </div>
