--- a/src/app/pages/devices/ont/ont.component.html
+++ b/src/app/pages/devices/ont/ont.component.html
@@ -11,7 +11,9 @@
         </nz-page-header>
     </nz-affix>
 
-    <app-ont-visual [parentDevice]="parentDeviceId" [ontId]="ont.id"></app-ont-visual>
+    <div style="margin-top: 25px;">
+        <app-ont-visual [ont]="ont"></app-ont-visual>
+    </div>
 
     <h5 style="margin-top: 35px;">ONT PORTS</h5>
     <i *ngIf="ontPortsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
