--- a/src/app/pages/devices/port-profile/port-profile.component.html
+++ b/src/app/pages/devices/port-profile/port-profile.component.html
@@ -4,7 +4,7 @@
             class="page-header"
             [ngClass]="{ affixed: isAffixed }"
             nzBackIcon
-            [nzTitle]="profile.name"
+            [nzTitle]="'Port Profile ' + profile.name"
             [nzSubtitle]="profile.description"
             (nzBack)="navigateUp()"
         >
