--- a/src/app/pages/devices/card/card.component.html
+++ b/src/app/pages/devices/card/card.component.html
@@ -18,8 +18,8 @@
     <h5 style="margin-top: 35px;">PORTS</h5>
     <i *ngIf="portsRequest === 'pending'" nz-icon [nzType]="'loading'" style="font-size: 24px;"></i>
     <ul *ngIf="portsRequest === 'success'" style="padding-left: 25px;">
-        <li *ngFor="let port of ports">
-            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'port', port.id]">Port {{ port.id }}</a>
+        <li *ngFor="let port of card.ports">
+            <a nz-button nzType="link" nzSize="small" [routerLink]="['/devices', parentDeviceId, 'port', port.id]">{{ port.name }}</a>
         </li>
     </ul>
 
