--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,4 @@
 ul.menu {
-    padding-left: 105px;
     height: 64px;
     line-height: 64px;
 }
@@ -7,6 +6,17 @@ ul.menu {
 ul.menu > li {
     height: 64px;
     z-index: 250;
+}
+
+li.logo {
+    min-width: 110px;
+}
+
+li.logo i.loading {
+    color: #ffffff;
+    font-size: 24px;
+    margin-left: 24px;
+    margin-top: 20px;
 }
 
 li.logo img {
